Fix wrong height for loading indicator

--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -23,7 +23,7 @@
 
 #__nuxt,
 #__nuxt > div {
-  @apply h-full;
+  height: 100%;
 }
 
 .link {
